resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/Availability/AddAllParameters.cs
using UnityEngine;

public class Foo : MonoBehaviour
{
    public void OnAudioFilterRead({caret})
    {
    }
}
